--- a/indice_pollution/templates/index.html
+++ b/indice_pollution/templates/index.html
@@ -12,6 +12,7 @@
     </head>
     <body>
         <div id="app">
+        <Search></Search>
         </div>
         <script src="{{ webpack_url_for('app.js') }}"></script>
         <script src="{{ webpack_url_for('chunk-vendors.js') }}"></script>
