--- a/indice_pollution/templates/base.html
+++ b/indice_pollution/templates/base.html
@@ -11,6 +11,7 @@
         <link href="/{{ webpack_url_for('chunk-vendors.css') }}" rel=stylesheet>
         <link href="/{{ webpack_url_for('app.js') }}"  rel=preload as=script>
         <link href="/{{ webpack_url_for('chunk-vendors.js') }}" rel=preload as=script>
+        <title>Indice de pollution</title>
     </head>
     <body>
         <header class="navbar" role="navigation">
