Remove useless log

--- a/indice_pollution/templates/indice.html
+++ b/indice_pollution/templates/indice.html
@@ -2,4 +2,5 @@
 {% block app %}
         <search></search>
         <indices insee={{ insee }}></indices>
+        <episodes insee={{ insee }}></episodes>
 {% endblock app %}
